# backend/transaction/handler/transaction.http.go
@@ -4,6 +4,7 @@ import (
 	"fmt"
 	"io"
 	"net/http"
+	"strings"
 
 	"github.com/Ralphbaer/hubla/backend/common/hlog"
 	commonHTTP "github.com/Ralphbaer/hubla/backend/common/net/http"
@@ -31,11 +32,29 @@ func (handler *TransactionHandler) Create() http.Handler {
 			commonHTTP.WithError(w, err)
 			return
 		}
+
 		ctfm := &uc.CreateFileMetadata{
 			ID:          uuid.New().String(),
 			FileSize:    r.Header.Get("Content-length"),
 			Disposition: r.Header.Get("Content-Disposition"),
 			BinaryData:  binaryData,
+		}
+
+		contentType := http.DetectContentType(binaryData)
+		if ok := strings.HasPrefix(contentType, "text/plain"); !ok {
+			commonHTTP.WithError(w, commonHTTP.ValidationError{
+				Code:    400,
+				Message: "Only text files with a .txt format are accepted",
+			})
+			return
+		}
+
+		if ctfm.FileSize == "0" {
+			commonHTTP.WithError(w, commonHTTP.ValidationError{
+				Code:    400,
+				Message: "Please provide a file or ensure the file is not empty.",
+			})
+			return
 		}
 
 		fileID, err := handler.UseCase.StoreFileMetadata(ctx, ctfm)
@@ -80,7 +99,6 @@ func (handler *TransactionHandler) GetFileTransactions() http.Handler {
 			return
 		}
 		if transactions == nil {
-			logger.Error(err.Error())
 			commonHTTP.OK(w, []interface{}{})
 			return
 		}
